# research_factory

./: README.md  pyproject.toml  run.sh
config/: settings.yaml
rf/: __init__.py  __main__.py  main.py
rf/base/: __init__.py  agent.py
rf/llm/: __init__.py  client.py
rf/phase1_intelligence/: __init__.py  hardware_guardian.py  novelty_auditor.py  trend_analyst.py
rf/phase2_dissection/: __init__.py  conflict_detector.py  math_translator.py  source_archaeologist.py
rf/phase3_debate/: __init__.py  critic.py  mediator.py  proposer.py
rf/phase4_quality/: __init__.py  editor_in_chief.py  publication_strategist.py  quality_inspector.py
rf/tools/: __init__.py  arxiv_crawler.py  github_stars.py  latex_compiler.py  openreview_client.py
tests/: test_base_agent  test_llm_config  test_tools
