[project]
name = "research-factory"
version = "1.5.0"
description = "RF-1.5: Multi-Agent Research Automation Pipeline powered by GitHub Models"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "arxiv>=2.1",
    "beautifulsoup4>=4.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
rf = "rf.main:cli_entry"
